khannedy golang clean architecture
